RWD Fixed: 'Welcome to Mogo' overlapping, offset 'about us' images, 'team' images too wide, 'instagram' too big and offset, 'instagram' and 'blogs' parts merged together, 'what people say' side padding

--- a/style.sass
+++ b/style.sass
@@ -87,7 +87,7 @@ body
 	h1
 		font-family: "Montserrat"
 		color: #fff
-		margin: 0 0 -10vh 0
+		margin: 0 0 -5vh 0
 
 	h4
 		color: #fff
@@ -133,10 +133,8 @@ hr
 
 #about
 	margin: 1vh auto
-	.image
 	img
-		position: relative
-		max-width: 300px
+		margin-bottom: 5%
 		&:hover
 			transition: 0.5s
 			transform: translate(-5px, -5px)
@@ -390,7 +388,7 @@ hr
 		max-width: 10vw
 .instagrams
 	div
-		padding: 1px
+		padding: 0 1px 1px 1px
 		margin: 0
 	.img-responsive
 		width: 200px
